UI Updates: Remove play buttons, category tabs, add spacing

--- a/alaka-new.91.tr/public_html/index.html
+++ b/alaka-new.91.tr/public_html/index.html
@@ -1828,11 +1828,7 @@
             <!-- Featured Card - Sol taraf, büyük -->
             <article class="showcase-card featured">
                 <img src="the-wall/hero1.png" alt="Profesyöneller" loading="eager" />
-                <a href="#bak" class="showcase-play">
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M8 5v14l11-7z" />
-                    </svg>
-                </a>
+
                 <div class="showcase-content">
                     <span class="showcase-label">Murat Aygen'le</span>
                     <h2 class="showcase-title" style="font-size: clamp(1.5rem, 3vw, 2.8rem);">PROFESYONELLER</h2>
@@ -1842,11 +1838,7 @@
             <!-- Card 2 - Üst sıra -->
             <article class="showcase-card dark-card">
                 <img src="the-wall/hero3.png" alt="Tartıya Çıkmadan Konuşalım" loading="eager" />
-                <a href="#bak" class="showcase-play">
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M8 5v14l11-7z" />
-                    </svg>
-                </a>
+
                 <div class="showcase-content">
                     <span class="showcase-label">Sohbet</span>
                     <h2 class="showcase-title">Tartıya<br>Çıkmadan<br>Konuşalım</h2>
@@ -1856,11 +1848,7 @@
             <!-- Card 3 - Üst sıra -->
             <article class="showcase-card">
                 <img src="the-wall/hero4.png" alt="Kırmadan Konuşalım" loading="eager" />
-                <a href="#bak" class="showcase-play">
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M8 5v14l11-7z" />
-                    </svg>
-                </a>
+
                 <div class="showcase-content">
                     <span class="showcase-label">Sohbet</span>
                     <h2 class="showcase-title">Kırmadan<br>Konuşalım</h2>
@@ -1870,11 +1858,7 @@
             <!-- Card 4 - Alt sıra -->
             <article class="showcase-card">
                 <img src="the-wall/hero2.png" alt="Ne Olursan Ol Rahat Ol" loading="eager" />
-                <a href="#bak" class="showcase-play">
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M8 5v14l11-7z" />
-                    </svg>
-                </a>
+
                 <div class="showcase-content">
                     <span class="showcase-label">Sohbet</span>
                     <h2 class="showcase-title">Ne Olursan<br>Ol<br>Rahat Ol</h2>
@@ -1884,11 +1868,7 @@
             <!-- Card 5 - Alt sıra -->
             <article class="showcase-card">
                 <img src="the-wall/hero5.png" alt="Kendini Koruma Akademisi" loading="eager" />
-                <a href="#bak" class="showcase-play">
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M8 5v14l11-7z" />
-                    </svg>
-                </a>
+
                 <div class="showcase-content">
                     <span class="showcase-label">Akademi</span>
                     <h2 class="showcase-title">Kendini<br>Koruma<br>Akademisi</h2>
@@ -1924,18 +1904,10 @@
         <!-- Section Head -->
         <h2 class="section-head">BAK</h2>
 
-        <!-- Category Tabs -->
-        <div class="category-tabs">
-            <button class="category-tab active" data-category="all">Tümü</button>
-            <button class="category-tab" data-category="profesyoneller">Profesyoneller</button>
-            <button class="category-tab" data-category="tartiya-cikmadan">Tartıya Çıkmadan</button>
-            <button class="category-tab" data-category="rahat-ol">Rahat Ol</button>
-            <button class="category-tab" data-category="akademi">Akademi</button>
-            <button class="category-tab" data-category="kirmadan">Kırmadan</button>
-        </div>
+
 
         <!-- Instagram-style 3-column grid -->
-        <div class="insta-grid">
+        <div class="insta-grid" style="margin-top: 50px;">
 
             <!-- Post 1 - Profesyoneller -->
             <!-- Post 1 - Profesyoneller -->
